--- a/05/ex5-1.html
+++ b/05/ex5-1.html
@@ -23,13 +23,17 @@
             var objects = await osql.connect(sql);
             console.log(objects);
             var html = '';
-            html = html + '<ul>';
+            html = html + '<table border="1">';
             for (var i = 0; i < objects.length; i++) {
                 var object = objects[i];
-                html = html + '<li>' + object.name + ',' + object.tweet + ',' + object.time + '</li>';
-            }
-            html = html + '</ul>';
+                html = html + '<tr>';
+                html = html + '<td>' + object.id +'</td>';
+                html = html + '<td>' + object.name +'</td>';
+                html = html + '</tr>';
+            }  
+            html = html + '</table>';
             document.getElementById('result').innerHTML = html;
+            
         }
         
 
