--- a/06Userv2/usertop.html
+++ b/06Userv2/usertop.html
@@ -9,14 +9,22 @@
     <script type="text/javascript" src="../lib/osql.js"></script>
 
     <script>
-        osql.requireLogin();//すべてのページに入れる．google認証をして，osql.connect()や，osql.getMe()を使えるようにしてくれる．
+        osql.requireLogin();
+        $().ready(function () {
+            init();
+        });
+
+        function init() {
+            var name = sessionStorage.getItem('name');
+            document.getElementById('welcome').innerHTML = 'ようこそ' + name + 'さん';
+        }
     </script>
 
 </head>
 
 <body>
     <h1>ユーザトップ</h1>
-    <p id="welcome">ようこそxxさん</p>
+    <p id="welcome"></p>
     <hr>
 
 </body>
