--- a/06Userv2/usertop.html
+++ b/06Userv2/usertop.html
@@ -15,7 +15,7 @@
         });
 
         function init() {
-            var name = sessionStorage.getItem('name');
+            var name = sessionStorage.getItem('username');
             document.getElementById('welcome').innerHTML = 'ようこそ' + name + 'さん';
         }
     </script>
