--- a/06Userv2/usertop.html
+++ b/06Userv2/usertop.html
@@ -17,6 +17,15 @@
         function init() {
             var name = sessionStorage.getItem('username');
             document.getElementById('welcome').innerHTML = 'ようこそ' + name + 'さん';
+
+            var id = sessionStorage.getItem('userid');
+
+            var URL = document.getElementById('link');
+            var newURL = URL.href + '?userid=' + id;
+            document.getElementById('link').href = newURL;
+
+
+
         }
     </script>
 
@@ -26,7 +35,7 @@
     <h1>ユーザトップ</h1>
     <p id="welcome"></p>
     <hr>
-    <p><a href="update.html">ユーザー情報変更</a></p>
+    <p><a id = link href="update.html">ユーザー情報変更</a></p>
     <hr>
 
 </body>
