--- a/06Userv2/index.html
+++ b/06Userv2/index.html
@@ -29,7 +29,7 @@
             sessionStorage.setItem('userid', objects[0].id);
             sessionStorage.setItem('username', objects[0].name);
 
-            location.href = 'usertop.html';
+            location.href = 'usertop.html'
         }
     </script>
 
