--- a/06Userv2/usertop.html
+++ b/06Userv2/usertop.html
@@ -19,10 +19,15 @@
             document.getElementById('welcome').innerHTML = 'ようこそ' + name + 'さん';
 
             var id = sessionStorage.getItem('userid');
+           
 
             var URL = document.getElementById('link');
             var newURL = URL.href + '?userid=' + id;
             document.getElementById('link').href = newURL;
+
+            var URL2 = document.getElementById('link2');
+            var newURL2 = URL2.href + '?userid=' + id;
+            document.getElementById('link2').href = newURL2;
 
 
 
@@ -36,6 +41,8 @@
     <p id="welcome"></p>
     <hr>
     <p><a id = link href="update.html">ユーザー情報変更</a></p>
+    <p><a id = link2 href="tweet.html">Tweetする</a></p>
+
     <hr>
 
 </body>
